--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 04-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1500,7 +1500,7 @@
 <td class='VargaStyle1'>आ ये त॒स्थुः पृष॑तीषु श्रु॒तासु॑ सु॒खेषु॑ रु॒द्रा म॒रुतो॒ रथे᳚षु |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>वना᳚ चिदुग्रा जिहते॒ नि वो᳚ भि॒या पृ॑थि॒वी चि॑द्रेजते॒ पर्व॑तश्चित् ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑ वृ॒द्धो बि॑भाय दि॒वश्चि॒त्‌ सानु॑ रेजत स्व॒ने वः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>यत्क्रीळ॑थ मरुत ऋष्टि॒मन्त॒ आप॑ इव स॒ध्र्य᳚ञ्चो धवध्वे ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
+<td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑ वृ॒द्धो बि॑भाय दि॒वश्चि॒त्‌ सानु॑ रेजत स्व॒ने वः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>यत्‌ क्रीळ॑थ मरुत ऋष्टि॒मन्त॒ आप॑ इव स॒ध्र्य᳚ञ्चो धवध्वे ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>व॒रा, इ॒वेद्‌ रै᳚व॒तासो॒ हिर᳚ण्यैर॒भि स्व॒धाभि॑स्त॒न्वः॑ पिपिश्रे |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>श्रि॒ये श्रेयां᳚सस्त॒वसो॒ रथे᳚षु स॒त्रा महां᳚सि चक्रिरे त॒नूषु॑ ||<span class='MantraNumbering'>{4/8}{4.3.25.4}{5.60.4}{5.5.4.4}{414, 4172}</span></td>
@@ -1509,7 +1509,7 @@
 <td class='VargaStyle1'>अ॒ज्ये॒ष्ठासो॒, अक॑निष्ठास ए॒ते सं भ्रात॑रो वावृधुः॒ सौभ॑गाय |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>युवा᳚ पि॒ता स्वपा᳚ रु॒द्र ए᳚षां सु॒दुघा॒ पृश्निः॑ सु॒दिना᳚ म॒रुद्भ्यः॑ ||<span class='MantraNumbering'>{5/8}{4.3.25.5}{5.60.5}{5.5.4.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यदु॑त्त॒मे म॑रुतो मध्य॒मे वा॒ यद्वा᳚व॒मे सु॑भगासो दि॒वि ष्ठ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>अतो᳚ नो रुद्रा, उ॒त वा॒ न्व१॑(अ॒)स्याऽग्ने᳚ वि॒त्ताद्ध॒विषो॒ यद्यजा᳚म ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>यदु॑त्त॒मे म॑रुतो मध्य॒मे वा॒ यद्‌ वा᳚व॒मे सु॑भगासो दि॒वि ष्ठ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>अतो᳚ नो रुद्रा, उ॒त वा॒ न्व१॑(अ॒)स्याऽग्ने᳚ वि॒त्ताद्ध॒विषो॒ यद्यजा᳚म ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अ॒ग्निश्च॒ यन्म॑रुतो विश्ववेदसो दि॒वो वह॑ध्व॒ उत्त॑रा॒दधि॒ ष्णुभिः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>ते म᳚न्दसा॒ना धुन॑यो रिशादसो वा॒मं ध॑त्त॒ यज॑मानाय सुन्व॒ते ||<span class='MantraNumbering'>{7/8}{4.3.25.7}{5.60.7}{5.5.4.7}{414, 4175}</span></td>
@@ -1605,7 +1605,7 @@
 <td class='VargaStyle1'>हिर᳚ण्यरूपमु॒षसो॒ व्यु॑ष्टा॒वयः॑स्थूण॒मुदि॑ता॒ सूर्य॑स्य |<span class='RishiDevChandas'>{आत्रेयः श्रुतविः | मित्रावरुणौ | त्रिष्टुप्}</span><p>आ रो᳚हथो वरुण मित्र॒ गर्त॒मत॑श्चक्षाथे॒, अदि॑तिं॒ दितिं᳚ च ||<span class='MantraNumbering'>{8/9}{4.3.31.3}{5.62.8}{5.5.6.8}{416, 4203}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यद्बंहि॑ष्ठं॒ नाति॒विधे᳚ सुदानू॒, अच्छि॑द्रं॒ शर्म॑ भुवनस्य गोपा |<span class='RishiDevChandas'>{आत्रेयः श्रुतविः | मित्रावरुणौ | त्रिष्टुप्}</span><p>तेन॑ नो मित्रावरुणावविष्टं॒ सिषा᳚सन्तो जिगी॒वांसः॑ स्याम ||<span class='MantraNumbering'>{9/9}{4.3.31.4}{5.62.9}{5.5.6.9}{416, 4204}</span></td>
+<td class='VargaStyle1'>यद्‌ बंहि॑ष्ठं॒ नाति॒विधे᳚ सुदानू॒, अच्छि॑द्रं॒ शर्म॑ भुवनस्य गोपा |<span class='RishiDevChandas'>{आत्रेयः श्रुतविः | मित्रावरुणौ | त्रिष्टुप्}</span><p>तेन॑ नो मित्रावरुणावविष्टं॒ सिषा᳚सन्तो जिगी॒वांसः॑ स्याम ||<span class='MantraNumbering'>{9/9}{4.3.31.4}{5.62.9}{5.5.6.9}{416, 4204}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[55] ऋतस्यगोपाविति सप्तर्चस्य सूक्तस्यात्रेयोर्चनानामित्रावरुणौजगती |</td>
