--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format4/RVS-Devanagari-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format4/RVS-Devanagari-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 04-Jan-2025]</h6>
+<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1502,7 +1502,7 @@
 <td class='VargaStyle1'>आयेत॒स्थुःपृष॑तीषुश्रु॒तासु॑सु॒खेषु॑रु॒द्राम॒रुतो॒रथे᳚षु |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>वना᳚चिदुग्राजिहते॒निवो᳚भि॒यापृ॑थि॒वीचि॑द्रेजते॒पर्व॑तश्चि॒‌त्(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑वृ॒द्धोबि॑भायदि॒वश्चि॒त्‌सानु॑रेजतस्व॒नेवः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>यत्क्रीळ॑थमरुतऋष्टि॒मन्त॒आप॑इवस॒ध्र्य᳚ञ्चोधवध्वे॒(स्वाहा᳚) || 3 || </td>
+<td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑वृ॒द्धोबि॑भायदि॒वश्चि॒त्‌सानु॑रेजतस्व॒नेवः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>यत्‌क्रीळ॑थमरुतऋष्टि॒मन्त॒आप॑इवस॒ध्र्य᳚ञ्चोधवध्वे॒(स्वाहा᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>व॒रा,इ॒वेद्‌रै᳚व॒तासो॒हिर᳚ण्यैर॒भिस्व॒धाभि॑स्त॒न्वः॑पिपिश्रे |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>श्रि॒येश्रेयां᳚सस्त॒वसो॒रथे᳚षुस॒त्रामहां᳚सिचक्रिरेत॒नूषु॒(स्वाहा᳚) || 4 || </td>
@@ -1511,7 +1511,7 @@
 <td class='VargaStyle1'>अ॒ज्ये॒ष्ठासो॒,अक॑निष्ठासए॒तेसंभ्रात॑रोवावृधुः॒सौभ॑गाय |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>युवा᳚पि॒तास्वपा᳚रु॒द्रए᳚षांसु॒दुघा॒पृश्निः॑सु॒दिना᳚म॒रुद्भ्यः॒(स्वाहा᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यदु॑त्त॒मेम॑रुतोमध्य॒मेवा॒यद्वा᳚व॒मेसु॑भगासोदि॒विष्ठ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>अतो᳚नोरुद्रा,उ॒तवा॒न्व१॑(अ॒)स्याऽग्ने᳚वि॒त्ताद्ध॒विषो॒यद्यजा᳚म॒(स्वाहा᳚) || 6 || </td>
+<td class='VargaStyle1'>यदु॑त्त॒मेम॑रुतोमध्य॒मेवा॒यद्‌वा᳚व॒मेसु॑भगासोदि॒विष्ठ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>अतो᳚नोरुद्रा,उ॒तवा॒न्व१॑(अ॒)स्याऽग्ने᳚वि॒त्ताद्ध॒विषो॒यद्यजा᳚म॒(स्वाहा᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अ॒ग्निश्च॒यन्म॑रुतोविश्ववेदसोदि॒वोवह॑ध्व॒उत्त॑रा॒दधि॒ष्णुभिः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>तेम᳚न्दसा॒नाधुन॑योरिशादसोवा॒मंध॑त्त॒यज॑मानायसुन्व॒ते(स्वाहा᳚) || 7 || </td>
@@ -1607,7 +1607,7 @@
 <td class='VargaStyle1'>हिर᳚ण्यरूपमु॒षसो॒व्यु॑ष्टा॒वयः॑स्थूण॒मुदि॑ता॒सूर्य॑स्य |<span class='RishiDevChandas'>{आत्रेयः श्रुतविः | मित्रावरुणौ | त्रिष्टुप्}</span><p>आरो᳚हथोवरुणमित्र॒गर्त॒मत॑श्चक्षाथे॒,अदि॑तिं॒दितिं᳚च॒(स्वाहा᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यद्बंहि॑ष्ठं॒नाति॒विधे᳚सुदानू॒,अच्छि॑द्रं॒शर्म॑भुवनस्यगोपा |<span class='RishiDevChandas'>{आत्रेयः श्रुतविः | मित्रावरुणौ | त्रिष्टुप्}</span><p>तेन॑नोमित्रावरुणावविष्टं॒सिषा᳚सन्तोजिगी॒वांसः॑स्याम॒(स्वाहा᳚) || 9 || </td>
+<td class='VargaStyle1'>यद्‌बंहि॑ष्ठं॒नाति॒विधे᳚सुदानू॒,अच्छि॑द्रं॒शर्म॑भुवनस्यगोपा |<span class='RishiDevChandas'>{आत्रेयः श्रुतविः | मित्रावरुणौ | त्रिष्टुप्}</span><p>तेन॑नोमित्रावरुणावविष्टं॒सिषा᳚सन्तोजिगी॒वांसः॑स्याम॒(स्वाहा᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[55] ऋतस्यगोपाविति सप्तर्चस्य सूक्तस्यात्रेयोर्चनानामित्रावरुणौजगती |<span class='MantraNumbering'>{अष्टक:4, अध्याय:4}{मंडल:5, सूक्त:63}{अनुवाक:5, सूक्त:7}</td>
