--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 04-Jan-2025]</h6>
+<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1457,7 +1457,7 @@
 <td class='VargaStyle1'>ಅ॒ರಾ,ಇ॒ವೇದಚ॑ರಮಾ॒,ಅಹೇ᳚ವ॒ಪ್ರಪ್ರ॑ಜಾಯಂತೇ॒,ಅಕ॑ವಾ॒ಮಹೋ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಪೃಶ್ನೇಃ᳚ಪು॒ತ್ರಾ,ಉ॑ಪ॒ಮಾಸೋ॒ರಭಿ॑ಷ್ಠಾಃ॒ಸ್ವಯಾ᳚ಮ॒ತ್ಯಾಮ॒ರುತಃ॒ಸಂಮಿ॑ಮಿಕ್ಷುಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯತ್‌ಪ್ರಾಯಾ᳚ಸಿಷ್ಟ॒ಪೃಷ॑ತೀಭಿ॒ರಶ್ವೈ᳚ರ್ವೀಳುಪ॒ವಿಭಿ᳚ರ್ಮರುತೋ॒ರಥೇ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಕ್ಷೋದಂ᳚ತ॒ಆಪೋ᳚ರಿಣ॒ತೇವನಾ॒ನ್ಯವೋ॒ಸ್ರಿಯೋ᳚ವೃಷ॒ಭಃಕ್ರಂ᳚ದತು॒ದ್ಯೌಃ(ಸ್ವಾಹಾ᳚) || 6 || </td>
+<td class='VargaStyle1'>ಯತ್‌ಪ್ರಾಯಾ᳚ಸಿಷ್ಟ॒ಪೃಷ॑ತೀಭಿ॒ರಶ್ವೈ᳚ರ್ವೀಳುಪ॒ವಿಭಿ᳚ರ್‌ಮರುತೋ॒ರಥೇ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಕ್ಷೋದಂ᳚ತ॒ಆಪೋ᳚ರಿಣ॒ತೇವನಾ॒ನ್ಯವೋ॒ಸ್ರಿಯೋ᳚ವೃಷ॒ಭಃಕ್ರಂ᳚ದತು॒ದ್ಯೌಃ(ಸ್ವಾಹಾ᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪ್ರಥಿ॑ಷ್ಟ॒ಯಾಮ᳚ನ್‌ಪೃಥಿ॒ವೀಚಿ॑ದೇಷಾಂ॒ಭರ್‍ತೇ᳚ವ॒ಗರ್ಭಂ॒ಸ್ವಮಿಚ್ಛವೋ᳚ಧುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಾತಾ॒ನ್‌ಹ್ಯಶ್ವಾ᳚ನ್‌ಧು॒ರ್‍ಯಾ᳚ಯುಯು॒ಜ್ರೇವ॒ರ್ಷಂಸ್ವೇದಂ᳚ಚಕ್ರಿರೇರು॒ದ್ರಿಯಾ᳚ಸಃ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
@@ -1490,19 +1490,19 @@
 <td class='VargaStyle2'>ವಯೋ॒ನಯೇಶ್ರೇಣೀಃ᳚ಪ॒ಪ್ತುರೋಜ॒ಸಾಽನ್ತಾಂ᳚ದಿ॒ವೋಬೃ॑ಹ॒ತಃಸಾನು॑ನ॒ಸ್ಪರಿ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಅಶ್ವಾ᳚ಸಏಷಾಮು॒ಭಯೇ॒ಯಥಾ᳚ವಿ॒ದುಃಪ್ರಪರ್‍ವ॑ತಸ್ಯನಭ॒ನೂಁರ॑ಚುಚ್ಯವುಃ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಮಿಮಾ᳚ತು॒ದ್ಯೌರದಿ॑ತಿರ್‍ವೀ॒ತಯೇ᳚ನಃ॒ಸಂದಾನು॑ಚಿತ್ರಾ,ಉ॒ಷಸೋ᳚ಯತಂತಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆಚು॑ಚ್ಯವುರ್ದಿ॒ವ್ಯಂಕೋಶ॑ಮೇ॒ತಋಷೇ᳚ರು॒ದ್ರಸ್ಯ॑ಮ॒ರುತೋ᳚ಗೃಣಾ॒ನಾಃ(ಸ್ವಾಹಾ᳚) || 8 || </td>
+<td class='VargaStyle2'>ಮಿಮಾ᳚ತು॒ದ್ಯೌರದಿ॑ತಿರ್‌ವೀ॒ತಯೇ᳚ನಃ॒ಸಂದಾನು॑ಚಿತ್ರಾ,ಉ॒ಷಸೋ᳚ಯತಂತಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆಚು॑ಚ್ಯವುರ್‌ದಿ॒ವ್ಯಂಕೋಶ॑ಮೇ॒ತಋಷೇ᳚ರು॒ದ್ರಸ್ಯ॑ಮ॒ರುತೋ᳚ಗೃಣಾ॒ನಾಃ(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[52] ಈಳೇಅಗ್ನಿಮಿತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವೋಮರುತಸ್ತ್ರಿಷ್ಟುಬಂತ್ಯೇದ್ವೇಜಗತ್ಯೌ | (ಆಗ್ನೇಯಂ ಚ ವೇತ್ಯನುಕ್ರಮಣ್ಯುಕ್ತೇರಗ್ರಾಮರುತೋವಾ) |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:3}{ಮಂಡಲ:5, ಸೂಕ್ತ:60}{ಅನುವಾಕ:5, ಸೂಕ್ತ:4}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಈಳೇ᳚,ಅ॒ಗ್ನಿಂಸ್ವವ॑ಸಂ॒ನಮೋ᳚ಭಿರಿ॒ಹಪ್ರ॑ಸ॒ತ್ತೋವಿಚ॑ಯತ್‌ಕೃ॒ತಂನಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರಥೈ᳚ರಿವ॒ಪ್ರಭ॑ರೇವಾಜ॒ಯದ್ಭಿಃ॑ಪ್ರದಕ್ಷಿ॒ಣಿನ್ಮ॒ರುತಾಂ॒ಸ್ತೋಮ॑ಮೃಧ್ಯಾ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:25</span></td>
+<td class='VargaStyle1'>ಈಳೇ᳚,ಅ॒ಗ್ನಿಂಸ್ವವ॑ಸಂ॒ನಮೋ᳚ಭಿರಿ॒ಹಪ್ರ॑ಸ॒ತ್ತೋವಿಚ॑ಯತ್‌ಕೃ॒ತಂನಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರಥೈ᳚ರಿವ॒ಪ್ರಭ॑ರೇವಾಜ॒ಯದ್ಭಿಃ॑ಪ್ರದಕ್ಷಿ॒ಣಿನ್‌ಮ॒ರುತಾಂ॒ಸ್ತೋಮ॑ಮೃಧ್ಯಾ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:25</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಆಯೇತ॒ಸ್ಥುಃಪೃಷ॑ತೀಷುಶ್ರು॒ತಾಸು॑ಸು॒ಖೇಷು॑ರು॒ದ್ರಾಮ॒ರುತೋ॒ರಥೇ᳚ಷು |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವನಾ᳚ಚಿದುಗ್ರಾಜಿಹತೇ॒ನಿವೋ᳚ಭಿ॒ಯಾಪೃ॑ಥಿ॒ವೀಚಿ॑ದ್ರೇಜತೇ॒ಪರ್‍ವ॑ತಶ್ಚಿ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪರ್‍ವ॑ತಶ್ಚಿ॒ನ್ಮಹಿ॑ವೃ॒ದ್ಧೋಬಿ॑ಭಾಯದಿ॒ವಶ್ಚಿ॒ತ್‌ಸಾನು॑ರೇಜತಸ್ವ॒ನೇವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯತ್ಕ್ರೀಳ॑ಥಮರುತಋಷ್ಟಿ॒ಮಂತ॒ಆಪ॑ಇವಸ॒ಧ್ರ್ಯಂ᳚ಚೋಧವಧ್ವೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle1'>ಪರ್‍ವ॑ತಶ್ಚಿ॒ನ್‌ಮಹಿ॑ವೃ॒ದ್ಧೋಬಿ॑ಭಾಯದಿ॒ವಶ್ಚಿ॒ತ್‌ಸಾನು॑ರೇಜತಸ್ವ॒ನೇವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯತ್‌ಕ್ರೀಳ॑ಥಮರುತಋಷ್ಟಿ॒ಮಂತ॒ಆಪ॑ಇವಸ॒ಧ್ರ್ಯಂ᳚ಚೋಧವಧ್ವೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ವ॒ರಾ,ಇ॒ವೇದ್‌ರೈ᳚ವ॒ತಾಸೋ॒ಹಿರ᳚ಣ್ಯೈರ॒ಭಿಸ್ವ॒ಧಾಭಿ॑ಸ್ತ॒ನ್ವಃ॑ಪಿಪಿಶ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಶ್ರಿ॒ಯೇಶ್ರೇಯಾಂ᳚ಸಸ್ತ॒ವಸೋ॒ರಥೇ᳚ಷುಸ॒ತ್ರಾಮಹಾಂ᳚ಸಿಚಕ್ರಿರೇತ॒ನೂಷು॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
@@ -1511,13 +1511,13 @@
 <td class='VargaStyle1'>ಅ॒ಜ್ಯೇ॒ಷ್ಠಾಸೋ॒,ಅಕ॑ನಿಷ್ಠಾಸಏ॒ತೇಸಂಭ್ರಾತ॑ರೋವಾವೃಧುಃ॒ಸೌಭ॑ಗಾಯ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯುವಾ᳚ಪಿ॒ತಾಸ್ವಪಾ᳚ರು॒ದ್ರಏ᳚ಷಾಂಸು॒ದುಘಾ॒ಪೃಶ್ನಿಃ॑ಸು॒ದಿನಾ᳚ಮ॒ರುದ್ಭ್ಯಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇಮ॑ರುತೋಮಧ್ಯ॒ಮೇವಾ॒ಯದ್ವಾ᳚ವ॒ಮೇಸು॑ಭಗಾಸೋದಿ॒ವಿಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ನೋರುದ್ರಾ,ಉ॒ತವಾ॒ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ಯದ್ಯಜಾ᳚ಮ॒(ಸ್ವಾಹಾ᳚) || 6 || </td>
+<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇಮ॑ರುತೋಮಧ್ಯ॒ಮೇವಾ॒ಯದ್‌ವಾ᳚ವ॒ಮೇಸು॑ಭಗಾಸೋದಿ॒ವಿಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ನೋರುದ್ರಾ,ಉ॒ತವಾ॒ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ಯದ್ಯಜಾ᳚ಮ॒(ಸ್ವಾಹಾ᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅ॒ಗ್ನಿಶ್ಚ॒ಯನ್ಮ॑ರುತೋವಿಶ್ವವೇದಸೋದಿ॒ವೋವಹ॑ಧ್ವ॒ಉತ್ತ॑ರಾ॒ದಧಿ॒ಷ್ಣುಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ತೇಮಂ᳚ದಸಾ॒ನಾಧುನ॑ಯೋರಿಶಾದಸೋವಾ॒ಮಂಧ॑ತ್ತ॒ಯಜ॑ಮಾನಾಯಸುನ್ವ॒ತೇ(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅಗ್ನೇ᳚ಮ॒ರುದ್ಭಿಃ॑ಶು॒ಭಯ॑ದ್ಭಿ॒ರೃಕ್ವ॑ಭಿಃ॒ಸೋಮಂ᳚ಪಿಬಮಂದಸಾ॒ನೋಗ॑ಣ॒ಶ್ರಿಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಪಾ॒ವ॒ಕೇಭಿ᳚ರ್ವಿಶ್ವಮಿ॒ನ್ವೇಭಿ॑ರಾ॒ಯುಭಿ॒ರ್‍ವೈಶ್ವಾ᳚ನರಪ್ರ॒ದಿವಾ᳚ಕೇ॒ತುನಾ᳚ಸ॒ಜೂಃ(ಸ್ವಾಹಾ᳚) || 8 || </td>
+<td class='VargaStyle1'>ಅಗ್ನೇ᳚ಮ॒ರುದ್ಭಿಃ॑ಶು॒ಭಯ॑ದ್ಭಿ॒ರ್‌ಋಕ್ವ॑ಭಿಃ॒ಸೋಮಂ᳚ಪಿಬಮಂದಸಾ॒ನೋಗ॑ಣ॒ಶ್ರಿಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಪಾ॒ವ॒ಕೇಭಿ᳚ರ್‌ವಿಶ್ವಮಿ॒ನ್ವೇಭಿ॑ರಾ॒ಯುಭಿ॒ರ್‍ವೈಶ್ವಾ᳚ನರಪ್ರ॒ದಿವಾ᳚ಕೇ॒ತುನಾ᳚ಸ॒ಜೂಃ(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[53] ಕೇಷ್ಠಾನರಇತ್ಯೇಕೋನವಿಂಶತ್ಯೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯಶ್ಯಾವಾಶ್ವಃ ಆದ್ಯಾನಾಂಚತಸೃಣಾಂ ಯಈಂ‌ವಹಂತಇತ್ಯಾದಿಷಣ್ಣಾಂಚಮರುತಃ ಪಂಚಮ್ಯಾದಿಚತಸೃಣಾಂತರಂತಮಹಿಷೀಶಶೀಯಸೀ ಉತಮೇರಪದಿತ್ಯಸ್ಯಾಃ ಪುರುಮೀಳ್ಹೋಯೋಮೇಧೇನೂನಾಮಿತ್ಯಸ್ಯಾಸ್ತರಂತಃ ಏತಂಮೇಸ್ತೋಮಮಿತ್ಯಾದಿ ತಿಸೃಣಾಂರಥವೀತಿರ್ಗಾಯತ್ರೀ ಪಂಚಮ್ಯನುಷ್ಟುಪ್‌ನವಮೀಸತೋಬೃಹತೀ (ಅವತ್ಯೌಪುರುಮೀಳ್ಹತರಂ ತೌವೈದದಶ್ವೀ ರಥವೀತಿರ್ದಾರ್ಭ್ಯಃ) |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:3}{ಮಂಡಲ:5, ಸೂಕ್ತ:61}{ಅನುವಾಕ:5, ಸೂಕ್ತ:5}</td>
@@ -1547,10 +1547,10 @@
 <td class='VargaStyle1'>ಉ॒ತಘಾ॒ನೇಮೋ॒,ಅಸ್ತು॑ತಃ॒ಪುಮಾಁ॒,ಇತಿ॑ಬ್ರುವೇಪ॒ಣಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ತರಂತಮಹಿಷೀ ಶಶೀಯಸೀ | ಗಾಯತ್ರೀ}</span><p>ಸವೈರ॑ದೇಯ॒ಇತ್ಸ॒ಮಃ(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಉ॒ತಮೇ᳚ಽರಪದ್‌ಯುವ॒ತಿರ್ಮ॑ಮಂ॒ದುಷೀ॒ಪ್ರತಿ॑ಶ್ಯಾ॒ವಾಯ॑ವರ್‍ತ॒ನಿಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಃ ಪುರುಮೀಳ್ಹಃ | ಸತೋಬೃಹತೀ}</span><p>ವಿರೋಹಿ॑ತಾಪುರುಮೀ॒ಳ್ಹಾಯ॑ಯೇಮತು॒ರ್‍ವಿಪ್ರಾ᳚ಯದೀ॒ರ್ಘಯ॑ಶಸೇ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
+<td class='VargaStyle1'>ಉ॒ತಮೇ᳚ಽರಪದ್‌ಯುವ॒ತಿರ್‌ಮ॑ಮಂ॒ದುಷೀ॒ಪ್ರತಿ॑ಶ್ಯಾ॒ವಾಯ॑ವರ್‍ತ॒ನಿಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಃ ಪುರುಮೀಳ್ಹಃ | ಸತೋಬೃಹತೀ}</span><p>ವಿರೋಹಿ॑ತಾಪುರುಮೀ॒ಳ್ಹಾಯ॑ಯೇಮತು॒ರ್‍ವಿಪ್ರಾ᳚ಯದೀ॒ರ್ಘಯ॑ಶಸೇ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯೋಮೇ᳚ಧೇನೂ॒ನಾಂಶ॒ತಂವೈದ॑ದಶ್ವಿ॒ರ್‍ಯಥಾ॒ದದ॑ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಸ್ತರಂತಃ | ಗಾಯತ್ರೀ}</span><p>ತ॒ರಂ॒ತಇ॑ವಮಂ॒ಹನಾ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
+<td class='VargaStyle1'>ಯೋಮೇ᳚ಧೇನೂ॒ನಾಂಶ॒ತಂವೈದ॑ದಶ್ವಿ॒ರ್‌ಯಥಾ॒ದದ॑ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಸ್ತರಂತಃ | ಗಾಯತ್ರೀ}</span><p>ತ॒ರಂ॒ತಇ॑ವಮಂ॒ಹನಾ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಯಈಂ॒ವಹಂ᳚ತಆ॒ಶುಭಿಃ॒ಪಿಬಂ᳚ತೋಮದಿ॒ರಂಮಧು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಗಾಯತ್ರೀ}</span><p>ಅತ್ರ॒ಶ್ರವಾಂ᳚ಸಿದಧಿರೇ॒(ಸ್ವಾಹಾ᳚) || 11 || <span class='MantraNumbering'>ವರ್ಗ:28</span></td>
@@ -1586,7 +1586,7 @@
 <td class='VargaStyle2'>ಋ॒ತೇನ॑ಋ॒ತಮಪಿ॑ಹಿತಂಧ್ರು॒ವಂವಾಂ॒ಸೂರ್‍ಯ॑ಸ್ಯ॒ಯತ್ರ॑ವಿಮು॒ಚಂತ್ಯಶ್ವಾ॑ನ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದಶ॑ಶ॒ತಾಸ॒ಹತ॑ಸ್ಥು॒ಸ್ತದೇಕಂ᳚ದೇ॒ವಾನಾಂ॒ಶ್ರೇಷ್ಠಂ॒ವಪು॑ಷಾಮಪಶ್ಯ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:30</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತತ್ಸುವಾಂ᳚ಮಿತ್ರಾವರುಣಾಮಹಿ॒ತ್ವಮೀ॒ರ್ಮಾತ॒ಸ್ಥುಷೀ॒ರಹ॑ಭಿರ್ದುದುಹ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಿಶ್ವಾಃ᳚ಪಿನ್ವಥಃ॒ಸ್ವಸ॑ರಸ್ಯ॒ಧೇನಾ॒,ಅನು॑ವಾ॒ಮೇಕಃ॑ಪ॒ವಿರಾವ॑ವರ್‍ತ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle2'>ತತ್ಸುವಾಂ᳚ಮಿತ್ರಾವರುಣಾಮಹಿ॒ತ್ವಮೀ॒ರ್ಮಾತ॒ಸ್ಥುಷೀ॒ರಹ॑ಭಿರ್‌ದುದುಹ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಿಶ್ವಾಃ᳚ಪಿನ್ವಥಃ॒ಸ್ವಸ॑ರಸ್ಯ॒ಧೇನಾ॒,ಅನು॑ವಾ॒ಮೇಕಃ॑ಪ॒ವಿರಾವ॑ವರ್‍ತ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅಧಾ᳚ರಯತಂಪೃಥಿ॒ವೀಮು॒ತದ್ಯಾಂಮಿತ್ರ॑ರಾಜಾನಾವರುಣಾ॒ಮಹೋ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವ॒ರ್ಧಯ॑ತ॒ಮೋಷ॑ಧೀಃ॒ಪಿನ್ವ॑ತಂ॒ಗಾ,ಅವ॑ವೃ॒ಷ್ಟಿಂಸೃ॑ಜತಂಜೀರದಾನೂ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
@@ -1607,7 +1607,7 @@
 <td class='VargaStyle1'>ಹಿರ᳚ಣ್ಯರೂಪಮು॒ಷಸೋ॒ವ್ಯು॑ಷ್ಟಾ॒ವಯಃ॑ಸ್ಥೂಣ॒ಮುದಿ॑ತಾ॒ಸೂರ್‍ಯ॑ಸ್ಯ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆರೋ᳚ಹಥೋವರುಣಮಿತ್ರ॒ಗರ್‍ತ॒ಮತ॑ಶ್ಚಕ್ಷಾಥೇ॒,ಅದಿ॑ತಿಂ॒ದಿತಿಂ᳚ಚ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯದ್ಬಂಹಿ॑ಷ್ಠಂ॒ನಾತಿ॒ವಿಧೇ᳚ಸುದಾನೂ॒,ಅಚ್ಛಿ॑ದ್ರಂ॒ಶರ್ಮ॑ಭುವನಸ್ಯಗೋಪಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತೇನ॑ನೋಮಿತ್ರಾವರುಣಾವವಿಷ್ಟಂ॒ಸಿಷಾ᳚ಸಂತೋಜಿಗೀ॒ವಾಂಸಃ॑ಸ್ಯಾಮ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
+<td class='VargaStyle1'>ಯದ್‌ಬಂಹಿ॑ಷ್ಠಂ॒ನಾತಿ॒ವಿಧೇ᳚ಸುದಾನೂ॒,ಅಚ್ಛಿ॑ದ್ರಂ॒ಶರ್ಮ॑ಭುವನಸ್ಯಗೋಪಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತೇನ॑ನೋಮಿತ್ರಾವರುಣಾವವಿಷ್ಟಂ॒ಸಿಷಾ᳚ಸಂತೋಜಿಗೀ॒ವಾಂಸಃ॑ಸ್ಯಾಮ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[55] ಋತಸ್ಯಗೋಪಾವಿತಿ ಸಪ್ತರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯೋರ್ಚನಾನಾಮಿತ್ರಾವರುಣೌಜಗತೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:63}{ಅನುವಾಕ:5, ಸೂಕ್ತ:7}</td>
