--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 04-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1734,7 +1734,7 @@
 <td class='VargaStyle1'>ಅ॒ರಾ, ಇ॒ವೇದಚ॑ರಮಾ॒, ಅಹೇ᳚ವ॒ ಪ್ರಪ್ರ॑ ಜಾಯಂತೇ॒, ಅಕ॑ವಾ॒ ಮಹೋ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಪೃಶ್ನೇಃ᳚ ಪು॒ತ್ರಾ, ಉ॑ಪ॒ಮಾಸೋ॒ ರಭಿ॑ಷ್ಠಾಃ॒ ಸ್ವಯಾ᳚ ಮ॒ತ್ಯಾ ಮ॒ರುತಃ॒ ಸಂ ಮಿ॑ಮಿಕ್ಷುಃ ||<span class='MantraNumbering'>{5/8}{5.58.5}{5.5.2.5}{4.3.23.5}{412, 4157}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯತ್‌ ಪ್ರಾಯಾ᳚ಸಿಷ್ಟ॒ ಪೃಷ॑ತೀಭಿ॒ರಶ್ವೈ᳚ರ್ವೀಳುಪ॒ವಿಭಿ᳚ರ್ಮರುತೋ॒ ರಥೇ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಕ್ಷೋದಂ᳚ತ॒ ಆಪೋ᳚ ರಿಣ॒ತೇ ವನಾ॒ನ್ಯವೋ॒ಸ್ರಿಯೋ᳚ ವೃಷ॒ಭಃ ಕ್ರಂ᳚ದತು॒ ದ್ಯೌಃ ||<span class='MantraNumbering'>{6/8}{5.58.6}{5.5.2.6}{4.3.23.6}{412, 4158}</span></td>
+<td class='VargaStyle1'>ಯತ್‌ ಪ್ರಾಯಾ᳚ಸಿಷ್ಟ॒ ಪೃಷ॑ತೀಭಿ॒ರಶ್ವೈ᳚ರ್ವೀಳುಪ॒ವಿಭಿ᳚ರ್‌ಮರುತೋ॒ ರಥೇ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಕ್ಷೋದಂ᳚ತ॒ ಆಪೋ᳚ ರಿಣ॒ತೇ ವನಾ॒ನ್ಯವೋ॒ಸ್ರಿಯೋ᳚ ವೃಷ॒ಭಃ ಕ್ರಂ᳚ದತು॒ ದ್ಯೌಃ ||<span class='MantraNumbering'>{6/8}{5.58.6}{5.5.2.6}{4.3.23.6}{412, 4158}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪ್ರಥಿ॑ಷ್ಟ॒ ಯಾಮ᳚ನ್‌ ಪೃಥಿ॒ವೀ ಚಿ॑ದೇಷಾಂ॒ ಭರ್‍ತೇ᳚ವ॒ ಗರ್ಭಂ॒ ಸ್ವಮಿಚ್ಛವೋ᳚ ಧುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಾತಾ॒ನ್‌ ಹ್ಯಶ್ವಾ᳚ನ್‌ ಧು॒ರ್‍ಯಾ᳚ಯುಯು॒ಜ್ರೇ ವ॒ರ್ಷಂ ಸ್ವೇದಂ᳚ ಚಕ್ರಿರೇ ರು॒ದ್ರಿಯಾ᳚ಸಃ ||<span class='MantraNumbering'>{7/8}{5.58.7}{5.5.2.7}{4.3.23.7}{412, 4159}</span></td>
@@ -1767,19 +1767,19 @@
 <td class='VargaStyle2'>ವಯೋ॒ ನ ಯೇ ಶ್ರೇಣೀಃ᳚ ಪ॒ಪ್ತುರೋಜ॒ಸಾ ಽನ್ತಾಂ᳚ದಿ॒ವೋ ಬೃ॑ಹ॒ತಃ ಸಾನು॑ನ॒ಸ್ಪರಿ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಅಶ್ವಾ᳚ಸ ಏಷಾಮು॒ಭಯೇ॒ ಯಥಾ᳚ ವಿ॒ದುಃ ಪ್ರ ಪರ್‍ವ॑ತಸ್ಯ ನಭ॒ನೂಁರ॑ಚುಚ್ಯವುಃ ||<span class='MantraNumbering'>{7/8}{5.59.7}{5.5.3.7}{4.3.24.7}{413, 4167}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಮಿಮಾ᳚ತು॒ ದ್ಯೌರದಿ॑ತಿರ್‍ವೀ॒ತಯೇ᳚ ನಃ॒ ಸಂ ದಾನು॑ಚಿತ್ರಾ, ಉ॒ಷಸೋ᳚ ಯತಂತಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆಚು॑ಚ್ಯವುರ್ದಿ॒ವ್ಯಂ ಕೋಶ॑ಮೇ॒ತ ಋಷೇ᳚ ರು॒ದ್ರಸ್ಯ॑ ಮ॒ರುತೋ᳚ ಗೃಣಾ॒ನಾಃ ||<span class='MantraNumbering'>{8/8}{5.59.8}{5.5.3.8}{4.3.24.8}{413, 4168}</span></td>
+<td class='VargaStyle2'>ಮಿಮಾ᳚ತು॒ ದ್ಯೌರದಿ॑ತಿರ್‌ವೀ॒ತಯೇ᳚ ನಃ॒ ಸಂ ದಾನು॑ಚಿತ್ರಾ, ಉ॒ಷಸೋ᳚ ಯತಂತಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆಚು॑ಚ್ಯವುರ್‌ದಿ॒ವ್ಯಂ ಕೋಶ॑ಮೇ॒ತ ಋಷೇ᳚ ರು॒ದ್ರಸ್ಯ॑ ಮ॒ರುತೋ᳚ ಗೃಣಾ॒ನಾಃ ||<span class='MantraNumbering'>{8/8}{5.59.8}{5.5.3.8}{4.3.24.8}{413, 4168}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[60] ಈಳೇಅಗ್ನಿಮಿತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವೋಮರುತಸ್ತ್ರಿಷ್ಟುಬಂತ್ಯೇದ್ವೇಜಗತ್ಯೌ | (ಆಗ್ನೇಯಂ ಚ ವೇತ್ಯನುಕ್ರಮಣ್ಯುಕ್ತೇರಗ್ರಾಮರುತೋವಾ) |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಈಳೇ᳚, ಅ॒ಗ್ನಿಂ ಸ್ವವ॑ಸಂ॒ ನಮೋ᳚ಭಿರಿ॒ಹ ಪ್ರ॑ಸ॒ತ್ತೋ ವಿ ಚ॑ಯತ್‌ ಕೃ॒ತಂ ನಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರಥೈ᳚ರಿವ॒ ಪ್ರ ಭ॑ರೇ ವಾಜ॒ಯದ್ಭಿಃ॑ ಪ್ರದಕ್ಷಿ॒ಣಿನ್ಮ॒ರುತಾಂ॒ ಸ್ತೋಮ॑ಮೃಧ್ಯಾಂ ||<span class='MantraNumbering'>{1/8}{5.60.1}{5.5.4.1}{4.3.25.1}{414, 4169}</span></td>
+<td class='VargaStyle1'>ಈಳೇ᳚, ಅ॒ಗ್ನಿಂ ಸ್ವವ॑ಸಂ॒ ನಮೋ᳚ಭಿರಿ॒ಹ ಪ್ರ॑ಸ॒ತ್ತೋ ವಿ ಚ॑ಯತ್‌ ಕೃ॒ತಂ ನಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರಥೈ᳚ರಿವ॒ ಪ್ರ ಭ॑ರೇ ವಾಜ॒ಯದ್ಭಿಃ॑ ಪ್ರದಕ್ಷಿ॒ಣಿನ್‌ಮ॒ರುತಾಂ॒ ಸ್ತೋಮ॑ಮೃಧ್ಯಾಂ ||<span class='MantraNumbering'>{1/8}{5.60.1}{5.5.4.1}{4.3.25.1}{414, 4169}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಆ ಯೇ ತ॒ಸ್ಥುಃ ಪೃಷ॑ತೀಷು ಶ್ರು॒ತಾಸು॑ ಸು॒ಖೇಷು॑ ರು॒ದ್ರಾ ಮ॒ರುತೋ॒ ರಥೇ᳚ಷು |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವನಾ᳚ ಚಿದುಗ್ರಾ ಜಿಹತೇ॒ ನಿ ವೋ᳚ ಭಿ॒ಯಾ ಪೃ॑ಥಿ॒ವೀ ಚಿ॑ದ್ರೇಜತೇ॒ ಪರ್‍ವ॑ತಶ್ಚಿತ್ ||<span class='MantraNumbering'>{2/8}{5.60.2}{5.5.4.2}{4.3.25.2}{414, 4170}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪರ್‍ವ॑ತಶ್ಚಿ॒ನ್ಮಹಿ॑ ವೃ॒ದ್ಧೋ ಬಿ॑ಭಾಯ ದಿ॒ವಶ್ಚಿ॒ತ್‌ ಸಾನು॑ ರೇಜತ ಸ್ವ॒ನೇ ವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯತ್ಕ್ರೀಳ॑ಥ ಮರುತ ಋಷ್ಟಿ॒ಮಂತ॒ ಆಪ॑ ಇವ ಸ॒ಧ್ರ್ಯಂ᳚ಚೋ ಧವಧ್ವೇ ||<span class='MantraNumbering'>{3/8}{5.60.3}{5.5.4.3}{4.3.25.3}{414, 4171}</span></td>
+<td class='VargaStyle1'>ಪರ್‍ವ॑ತಶ್ಚಿ॒ನ್‌ಮಹಿ॑ ವೃ॒ದ್ಧೋ ಬಿ॑ಭಾಯ ದಿ॒ವಶ್ಚಿ॒ತ್‌ ಸಾನು॑ ರೇಜತ ಸ್ವ॒ನೇ ವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯತ್‌ ಕ್ರೀಳ॑ಥ ಮರುತ ಋಷ್ಟಿ॒ಮಂತ॒ ಆಪ॑ ಇವ ಸ॒ಧ್ರ್ಯಂ᳚ಚೋ ಧವಧ್ವೇ ||<span class='MantraNumbering'>{3/8}{5.60.3}{5.5.4.3}{4.3.25.3}{414, 4171}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ವ॒ರಾ, ಇ॒ವೇದ್‌ ರೈ᳚ವ॒ತಾಸೋ॒ ಹಿರ᳚ಣ್ಯೈರ॒ಭಿ ಸ್ವ॒ಧಾಭಿ॑ಸ್ತ॒ನ್ವಃ॑ ಪಿಪಿಶ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಶ್ರಿ॒ಯೇ ಶ್ರೇಯಾಂ᳚ಸಸ್ತ॒ವಸೋ॒ ರಥೇ᳚ಷು ಸ॒ತ್ರಾ ಮಹಾಂ᳚ಸಿ ಚಕ್ರಿರೇ ತ॒ನೂಷು॑ ||<span class='MantraNumbering'>{4/8}{5.60.4}{5.5.4.4}{4.3.25.4}{414, 4172}</span></td>
@@ -1788,13 +1788,13 @@
 <td class='VargaStyle1'>ಅ॒ಜ್ಯೇ॒ಷ್ಠಾಸೋ॒, ಅಕ॑ನಿಷ್ಠಾಸ ಏ॒ತೇ ಸಂ ಭ್ರಾತ॑ರೋ ವಾವೃಧುಃ॒ ಸೌಭ॑ಗಾಯ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯುವಾ᳚ ಪಿ॒ತಾ ಸ್ವಪಾ᳚ ರು॒ದ್ರ ಏ᳚ಷಾಂ ಸು॒ದುಘಾ॒ ಪೃಶ್ನಿಃ॑ ಸು॒ದಿನಾ᳚ ಮ॒ರುದ್ಭ್ಯಃ॑ ||<span class='MantraNumbering'>{5/8}{5.60.5}{5.5.4.5}{4.3.25.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇ ಮ॑ರುತೋ ಮಧ್ಯ॒ಮೇ ವಾ॒ ಯದ್ವಾ᳚ವ॒ಮೇ ಸು॑ಭಗಾಸೋ ದಿ॒ವಿ ಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ ನೋ ರುದ್ರಾ, ಉ॒ತ ವಾ॒ ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ ಯದ್ಯಜಾ᳚ಮ ||<span class='MantraNumbering'>{6/8}{5.60.6}{5.5.4.6}{4.3.25.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇ ಮ॑ರುತೋ ಮಧ್ಯ॒ಮೇ ವಾ॒ ಯದ್‌ ವಾ᳚ವ॒ಮೇ ಸು॑ಭಗಾಸೋ ದಿ॒ವಿ ಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ ನೋ ರುದ್ರಾ, ಉ॒ತ ವಾ॒ ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ ಯದ್ಯಜಾ᳚ಮ ||<span class='MantraNumbering'>{6/8}{5.60.6}{5.5.4.6}{4.3.25.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅ॒ಗ್ನಿಶ್ಚ॒ ಯನ್ಮ॑ರುತೋ ವಿಶ್ವವೇದಸೋ ದಿ॒ವೋ ವಹ॑ಧ್ವ॒ ಉತ್ತ॑ರಾ॒ದಧಿ॒ ಷ್ಣುಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ತೇ ಮಂ᳚ದಸಾ॒ನಾ ಧುನ॑ಯೋ ರಿಶಾದಸೋ ವಾ॒ಮಂ ಧ॑ತ್ತ॒ ಯಜ॑ಮಾನಾಯ ಸುನ್ವ॒ತೇ ||<span class='MantraNumbering'>{7/8}{5.60.7}{5.5.4.7}{4.3.25.7}{414, 4175}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅಗ್ನೇ᳚ ಮ॒ರುದ್ಭಿಃ॑ ಶು॒ಭಯ॑ದ್ಭಿ॒ರೃಕ್ವ॑ಭಿಃ॒ ಸೋಮಂ᳚ ಪಿಬ ಮಂದಸಾ॒ನೋ ಗ॑ಣ॒ಶ್ರಿಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಪಾ॒ವ॒ಕೇಭಿ᳚ರ್ವಿಶ್ವಮಿ॒ನ್ವೇಭಿ॑ರಾ॒ಯುಭಿ॒ರ್‍ವೈಶ್ವಾ᳚ನರ ಪ್ರ॒ದಿವಾ᳚ ಕೇ॒ತುನಾ᳚ ಸ॒ಜೂಃ ||<span class='MantraNumbering'>{8/8}{5.60.8}{5.5.4.8}{4.3.25.8}{414, 4176}</span></td>
+<td class='VargaStyle1'>ಅಗ್ನೇ᳚ ಮ॒ರುದ್ಭಿಃ॑ ಶು॒ಭಯ॑ದ್ಭಿ॒ರ್‌ಋಕ್ವ॑ಭಿಃ॒ ಸೋಮಂ᳚ ಪಿಬ ಮಂದಸಾ॒ನೋ ಗ॑ಣ॒ಶ್ರಿಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಪಾ॒ವ॒ಕೇಭಿ᳚ರ್‌ವಿಶ್ವಮಿ॒ನ್ವೇಭಿ॑ರಾ॒ಯುಭಿ॒ರ್‍ವೈಶ್ವಾ᳚ನರ ಪ್ರ॒ದಿವಾ᳚ ಕೇ॒ತುನಾ᳚ ಸ॒ಜೂಃ ||<span class='MantraNumbering'>{8/8}{5.60.8}{5.5.4.8}{4.3.25.8}{414, 4176}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[61] ಕೇಷ್ಠಾನರಇತ್ಯೇಕೋನವಿಂಶತ್ಯೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯಶ್ಯಾವಾಶ್ವಃ ಆದ್ಯಾನಾಂಚತಸೃಣಾಂ ಯಈಂ‌ವಹಂತಇತ್ಯಾದಿಷಣ್ಣಾಂಚಮರುತಃ ಪಂಚಮ್ಯಾದಿಚತಸೃಣಾಂತರಂತಮಹಿಷೀಶಶೀಯಸೀ ಉತಮೇರಪದಿತ್ಯಸ್ಯಾಃ ಪುರುಮೀಳ್ಹೋಯೋಮೇಧೇನೂನಾಮಿತ್ಯಸ್ಯಾಸ್ತರಂತಃ ಏತಂಮೇಸ್ತೋಮಮಿತ್ಯಾದಿ ತಿಸೃಣಾಂರಥವೀತಿರ್ಗಾಯತ್ರೀ ಪಂಚಮ್ಯನುಷ್ಟುಪ್‌ನವಮೀಸತೋಬೃಹತೀ (ಅವತ್ಯೌಪುರುಮೀಳ್ಹತರಂ ತೌವೈದದಶ್ವೀ ರಥವೀತಿರ್ದಾರ್ಭ್ಯಃ) |</td>
@@ -1824,10 +1824,10 @@
 <td class='VargaStyle1'>ಉ॒ತ ಘಾ॒ ನೇಮೋ॒, ಅಸ್ತು॑ತಃ॒ ಪುಮಾಁ॒, ಇತಿ॑ ಬ್ರುವೇ ಪ॒ಣಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ತರಂತಮಹಿಷೀ ಶಶೀಯಸೀ | ಗಾಯತ್ರೀ}</span><p>ಸ ವೈರ॑ದೇಯ॒ ಇತ್ಸ॒ಮಃ ||<span class='MantraNumbering'>{8/19}{5.61.8}{5.5.5.8}{4.3.27.3}{415, 4184}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಉ॒ತ ಮೇ᳚ಽರಪದ್‌ ಯುವ॒ತಿರ್ಮ॑ಮಂ॒ದುಷೀ॒ ಪ್ರತಿ॑ ಶ್ಯಾ॒ವಾಯ॑ ವರ್‍ತ॒ನಿಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಃ ಪುರುಮೀಳ್ಹಃ | ಸತೋಬೃಹತೀ}</span><p>ವಿ ರೋಹಿ॑ತಾ ಪುರುಮೀ॒ಳ್ಹಾಯ॑ ಯೇಮತು॒ರ್‍ವಿಪ್ರಾ᳚ಯ ದೀ॒ರ್ಘಯ॑ಶಸೇ ||<span class='MantraNumbering'>{9/19}{5.61.9}{5.5.5.9}{4.3.27.4}{415, 4185}</span></td>
+<td class='VargaStyle1'>ಉ॒ತ ಮೇ᳚ಽರಪದ್‌ ಯುವ॒ತಿರ್‌ಮ॑ಮಂ॒ದುಷೀ॒ ಪ್ರತಿ॑ ಶ್ಯಾ॒ವಾಯ॑ ವರ್‍ತ॒ನಿಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಃ ಪುರುಮೀಳ್ಹಃ | ಸತೋಬೃಹತೀ}</span><p>ವಿ ರೋಹಿ॑ತಾ ಪುರುಮೀ॒ಳ್ಹಾಯ॑ ಯೇಮತು॒ರ್‍ವಿಪ್ರಾ᳚ಯ ದೀ॒ರ್ಘಯ॑ಶಸೇ ||<span class='MantraNumbering'>{9/19}{5.61.9}{5.5.5.9}{4.3.27.4}{415, 4185}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯೋ ಮೇ᳚ ಧೇನೂ॒ನಾಂ ಶ॒ತಂ ವೈದ॑ದಶ್ವಿ॒ರ್‍ಯಥಾ॒ ದದ॑ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಸ್ತರಂತಃ | ಗಾಯತ್ರೀ}</span><p>ತ॒ರಂ॒ತ ಇ॑ವ ಮಂ॒ಹನಾ᳚ ||<span class='MantraNumbering'>{10/19}{5.61.10}{5.5.5.10}{4.3.27.5}{415, 4186}</span></td>
+<td class='VargaStyle1'>ಯೋ ಮೇ᳚ ಧೇನೂ॒ನಾಂ ಶ॒ತಂ ವೈದ॑ದಶ್ವಿ॒ರ್‌ಯಥಾ॒ ದದ॑ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ವೈದದಶ್ವಿಸ್ತರಂತಃ | ಗಾಯತ್ರೀ}</span><p>ತ॒ರಂ॒ತ ಇ॑ವ ಮಂ॒ಹನಾ᳚ ||<span class='MantraNumbering'>{10/19}{5.61.10}{5.5.5.10}{4.3.27.5}{415, 4186}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಯ ಈಂ॒ ವಹಂ᳚ತ ಆ॒ಶುಭಿಃ॒ ಪಿಬಂ᳚ತೋ ಮದಿ॒ರಂ ಮಧು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಗಾಯತ್ರೀ}</span><p>ಅತ್ರ॒ ಶ್ರವಾಂ᳚ಸಿ ದಧಿರೇ ||<span class='MantraNumbering'>{11/19}{5.61.11}{5.5.5.11}{4.3.28.1}{415, 4187}</span></td>
@@ -1863,7 +1863,7 @@
 <td class='VargaStyle2'>ಋ॒ತೇನ॑ ಋ॒ತಮಪಿ॑ಹಿತಂ ಧ್ರು॒ವಂ ವಾಂ॒ ಸೂರ್‍ಯ॑ಸ್ಯ॒ ಯತ್ರ॑ ವಿಮು॒ಚಂತ್ಯಶ್ವಾ॑ನ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದಶ॑ ಶ॒ತಾ ಸ॒ಹ ತ॑ಸ್ಥು॒ಸ್ತದೇಕಂ᳚ ದೇ॒ವಾನಾಂ॒ ಶ್ರೇಷ್ಠಂ॒ ವಪು॑ಷಾಮಪಶ್ಯಂ ||<span class='MantraNumbering'>{1/9}{5.62.1}{5.5.6.1}{4.3.30.1}{416, 4196}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತತ್ಸು ವಾಂ᳚ ಮಿತ್ರಾವರುಣಾ ಮಹಿ॒ತ್ವಮೀ॒ರ್ಮಾ ತ॒ಸ್ಥುಷೀ॒ರಹ॑ಭಿರ್ದುದುಹ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಿಶ್ವಾಃ᳚ ಪಿನ್ವಥಃ॒ ಸ್ವಸ॑ರಸ್ಯ॒ ಧೇನಾ॒, ಅನು॑ ವಾ॒ಮೇಕಃ॑ ಪ॒ವಿರಾ ವ॑ವರ್‍ತ ||<span class='MantraNumbering'>{2/9}{5.62.2}{5.5.6.2}{4.3.30.2}{416, 4197}</span></td>
+<td class='VargaStyle2'>ತತ್ಸು ವಾಂ᳚ ಮಿತ್ರಾವರುಣಾ ಮಹಿ॒ತ್ವಮೀ॒ರ್ಮಾ ತ॒ಸ್ಥುಷೀ॒ರಹ॑ಭಿರ್‌ದುದುಹ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಿಶ್ವಾಃ᳚ ಪಿನ್ವಥಃ॒ ಸ್ವಸ॑ರಸ್ಯ॒ ಧೇನಾ॒, ಅನು॑ ವಾ॒ಮೇಕಃ॑ ಪ॒ವಿರಾ ವ॑ವರ್‍ತ ||<span class='MantraNumbering'>{2/9}{5.62.2}{5.5.6.2}{4.3.30.2}{416, 4197}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅಧಾ᳚ರಯತಂ ಪೃಥಿ॒ವೀಮು॒ತ ದ್ಯಾಂ ಮಿತ್ರ॑ರಾಜಾನಾ ವರುಣಾ॒ ಮಹೋ᳚ಭಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವ॒ರ್ಧಯ॑ತ॒ಮೋಷ॑ಧೀಃ॒ ಪಿನ್ವ॑ತಂ॒ ಗಾ, ಅವ॑ ವೃ॒ಷ್ಟಿಂ ಸೃ॑ಜತಂ ಜೀರದಾನೂ ||<span class='MantraNumbering'>{3/9}{5.62.3}{5.5.6.3}{4.3.30.3}{416, 4198}</span></td>
@@ -1884,7 +1884,7 @@
 <td class='VargaStyle1'>ಹಿರ᳚ಣ್ಯರೂಪಮು॒ಷಸೋ॒ ವ್ಯು॑ಷ್ಟಾ॒ವಯಃ॑ಸ್ಥೂಣ॒ಮುದಿ॑ತಾ॒ ಸೂರ್‍ಯ॑ಸ್ಯ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆ ರೋ᳚ಹಥೋ ವರುಣ ಮಿತ್ರ॒ ಗರ್‍ತ॒ಮತ॑ಶ್ಚಕ್ಷಾಥೇ॒, ಅದಿ॑ತಿಂ॒ ದಿತಿಂ᳚ ಚ ||<span class='MantraNumbering'>{8/9}{5.62.8}{5.5.6.8}{4.3.31.3}{416, 4203}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯದ್ಬಂಹಿ॑ಷ್ಠಂ॒ ನಾತಿ॒ವಿಧೇ᳚ ಸುದಾನೂ॒, ಅಚ್ಛಿ॑ದ್ರಂ॒ ಶರ್ಮ॑ ಭುವನಸ್ಯ ಗೋಪಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತೇನ॑ ನೋ ಮಿತ್ರಾವರುಣಾವವಿಷ್ಟಂ॒ ಸಿಷಾ᳚ಸಂತೋ ಜಿಗೀ॒ವಾಂಸಃ॑ ಸ್ಯಾಮ ||<span class='MantraNumbering'>{9/9}{5.62.9}{5.5.6.9}{4.3.31.4}{416, 4204}</span></td>
+<td class='VargaStyle1'>ಯದ್‌ ಬಂಹಿ॑ಷ್ಠಂ॒ ನಾತಿ॒ವಿಧೇ᳚ ಸುದಾನೂ॒, ಅಚ್ಛಿ॑ದ್ರಂ॒ ಶರ್ಮ॑ ಭುವನಸ್ಯ ಗೋಪಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ರುತವಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತೇನ॑ ನೋ ಮಿತ್ರಾವರುಣಾವವಿಷ್ಟಂ॒ ಸಿಷಾ᳚ಸಂತೋ ಜಿಗೀ॒ವಾಂಸಃ॑ ಸ್ಯಾಮ ||<span class='MantraNumbering'>{9/9}{5.62.9}{5.5.6.9}{4.3.31.4}{416, 4204}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[63] ಋತಸ್ಯಗೋಪಾವಿತಿ ಸಪ್ತರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯೋರ್ಚನಾನಾಮಿತ್ರಾವರುಣೌಜಗತೀ |</td>
