--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format3/RVS-Malayalam-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format3/RVS-Malayalam-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 04-Jan-2025]</h6>
+<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1841,7 +1841,7 @@
 <td class='VargaStyle1'>ആയേത॒സ്ഥുഃപൃഷ॑തീഷുശ്രു॒താസു॑സു॒ഖേഷു॑രു॒ദ്രാമ॒രുതോ॒രഥേ᳚ഷു |<p>വനാ᳚ചിദുഗ്രാജിഹതേ॒നിവോ᳚ഭി॒യാപൃ॑ഥി॒വീചി॑ദ്രേജതേ॒പർവ॑തശ്ചിത് || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>പർവ॑തശ്ചി॒ന്മഹി॑വൃ॒ദ്ധോബി॑ഭായദി॒വശ്ചി॒ത്‌സാനു॑രേജതസ്വ॒നേവഃ॑ |<p>യത്ക്രീള॑ഥമരുതഋഷ്ടി॒മന്ത॒ആപ॑ഇവസ॒ധ്ര്യ᳚ഞ്ചോധവധ്വേ || 3 || </td>
+<td class='VargaStyle1'>പർവ॑തശ്ചി॒ന്മഹി॑വൃ॒ദ്ധോബി॑ഭായദി॒വശ്ചി॒ത്‌സാനു॑രേജതസ്വ॒നേവഃ॑ |<p>യത്‌ക്രീള॑ഥമരുതഋഷ്ടി॒മന്ത॒ആപ॑ഇവസ॒ധ്ര്യ᳚ഞ്ചോധവധ്വേ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>വ॒രാ,ഇ॒വേദ്‌രൈ᳚വ॒താസോ॒ഹിര᳚ണ്യൈര॒ഭിസ്വ॒ധാഭി॑സ്ത॒ന്വഃ॑പിപിശ്രേ |<p>ശ്രി॒യേശ്രേയാം᳚സസ്ത॒വസോ॒രഥേ᳚ഷുസ॒ത്രാമഹാം᳚സിചക്രിരേത॒നൂഷു॑ || 4 || </td>
@@ -1850,7 +1850,7 @@
 <td class='VargaStyle1'>അ॒ജ്യേ॒ഷ്ഠാസോ॒,അക॑നിഷ്ഠാസഏ॒തേസംഭ്രാത॑രോവാവൃധുഃ॒സൗഭ॑ഗായ |<p>യുവാ᳚പി॒താസ്വപാ᳚രു॒ദ്രഏ᳚ഷാംസു॒ദുഘാ॒പൃശ്നിഃ॑സു॒ദിനാ᳚മ॒രുദ്ഭ്യഃ॑ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യദു॑ത്ത॒മേമ॑രുതോമധ്യ॒മേവാ॒യദ്വാ᳚വ॒മേസു॑ഭഗാസോദി॒വിഷ്ഠ |<p>അതോ᳚നോരുദ്രാ,ഉ॒തവാ॒ന്വ1॑(അ॒)സ്യാഽഗ്നേ᳚വി॒ത്താദ്ധ॒വിഷോ॒യദ്യജാ᳚മ || 6 || </td>
+<td class='VargaStyle1'>യദു॑ത്ത॒മേമ॑രുതോമധ്യ॒മേവാ॒യദ്‌വാ᳚വ॒മേസു॑ഭഗാസോദി॒വിഷ്ഠ |<p>അതോ᳚നോരുദ്രാ,ഉ॒തവാ॒ന്വ1॑(അ॒)സ്യാഽഗ്നേ᳚വി॒ത്താദ്ധ॒വിഷോ॒യദ്യജാ᳚മ || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അ॒ഗ്നിശ്ച॒യന്മ॑രുതോവിശ്വവേദസോദി॒വോവഹ॑ധ്വ॒ഉത്ത॑രാ॒ദധി॒ഷ്ണുഭിഃ॑ |<p>തേമ᳚ന്ദസാ॒നാധുന॑യോരിശാദസോവാ॒മംധ॑ത്ത॒യജ॑മാനായസുന്വ॒തേ || 7 || </td>
@@ -1948,7 +1948,7 @@
 <td class='VargaStyle1'>ഹിര᳚ണ്യരൂപമു॒ഷസോ॒വ്യു॑ഷ്ടാ॒വയഃ॑സ്ഥൂണ॒മുദി॑താ॒സൂര്യ॑സ്യ |<p>ആരോ᳚ഹഥോവരുണമിത്ര॒ഗർത॒മത॑ശ്ചക്ഷാഥേ॒,അദി॑തിം॒ദിതിം᳚ച || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യദ്ബംഹി॑ഷ്ഠം॒നാതി॒വിധേ᳚സുദാനൂ॒,അച്ഛി॑ദ്രം॒ശർമ॑ഭുവനസ്യഗോപാ |<p>തേന॑നോമിത്രാവരുണാവവിഷ്ടം॒സിഷാ᳚സന്തോജിഗീ॒വാംസഃ॑സ്യാമ || 9 || </td>
+<td class='VargaStyle1'>യദ്‌ബംഹി॑ഷ്ഠം॒നാതി॒വിധേ᳚സുദാനൂ॒,അച്ഛി॑ദ്രം॒ശർമ॑ഭുവനസ്യഗോപാ |<p>തേന॑നോമിത്രാവരുണാവവിഷ്ടം॒സിഷാ᳚സന്തോജിഗീ॒വാംസഃ॑സ്യാമ || 9 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[63] ഋതസ്യഗോപാവിതി സപ്തർചസ്യ സൂക്തസ്യാത്രേയോർചനാനാമിത്രാവരുണൗജഗതീ |<span class='MantraNumbering'>{മണ്ഡല:5, സൂക്ത:63}{അനുവാക:5, സൂക്ത:7}{അഷ്ടക:4, അധ്യായ:4}</span>
