--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format3/RVS-Telugu-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format3/RVS-Telugu-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 04-Jan-2025]</h6>
+<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1841,7 +1841,7 @@
 <td class='VargaStyle1'>ఆయేత॒స్థుఃపృష॑తీషుశ్రు॒తాసు॑సు॒ఖేషు॑రు॒ద్రామ॒రుతో॒రథే᳚షు |<p>వనా᳚చిదుగ్రాజిహతే॒నివో᳚భి॒యాపృ॑థి॒వీచి॑ద్రేజతే॒పర్వ॑తశ్చిత్ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>పర్వ॑తశ్చి॒న్మహి॑వృ॒ద్ధోబి॑భాయది॒వశ్చి॒త్‌సాను॑రేజతస్వ॒నేవః॑ |<p>యత్క్రీళ॑థమరుతఋష్టి॒మంత॒ఆప॑ఇవస॒ధ్ర్యం᳚చోధవధ్వే || 3 || </td>
+<td class='VargaStyle1'>పర్వ॑తశ్చి॒న్మహి॑వృ॒ద్ధోబి॑భాయది॒వశ్చి॒త్‌సాను॑రేజతస్వ॒నేవః॑ |<p>యత్‌క్రీళ॑థమరుతఋష్టి॒మంత॒ఆప॑ఇవస॒ధ్ర్యం᳚చోధవధ్వే || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>వ॒రా,ఇ॒వేద్‌రై᳚వ॒తాసో॒హిర᳚ణ్యైర॒భిస్వ॒ధాభి॑స్త॒న్వః॑పిపిశ్రే |<p>శ్రి॒యేశ్రేయాం᳚సస్త॒వసో॒రథే᳚షుస॒త్రామహాం᳚సిచక్రిరేత॒నూషు॑ || 4 || </td>
@@ -1850,7 +1850,7 @@
 <td class='VargaStyle1'>అ॒జ్యే॒ష్ఠాసో॒,అక॑నిష్ఠాసఏ॒తేసంభ్రాత॑రోవావృధుః॒సౌభ॑గాయ |<p>యువా᳚పి॒తాస్వపా᳚రు॒ద్రఏ᳚షాంసు॒దుఘా॒పృశ్నిః॑సు॒దినా᳚మ॒రుద్భ్యః॑ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యదు॑త్త॒మేమ॑రుతోమధ్య॒మేవా॒యద్వా᳚వ॒మేసు॑భగాసోది॒విష్ఠ |<p>అతో᳚నోరుద్రా,ఉ॒తవా॒న్వ1॑(అ॒)స్యాఽగ్నే᳚వి॒త్తాద్ధ॒విషో॒యద్యజా᳚మ || 6 || </td>
+<td class='VargaStyle1'>యదు॑త్త॒మేమ॑రుతోమధ్య॒మేవా॒యద్‌వా᳚వ॒మేసు॑భగాసోది॒విష్ఠ |<p>అతో᳚నోరుద్రా,ఉ॒తవా॒న్వ1॑(అ॒)స్యాఽగ్నే᳚వి॒త్తాద్ధ॒విషో॒యద్యజా᳚మ || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అ॒గ్నిశ్చ॒యన్మ॑రుతోవిశ్వవేదసోది॒వోవహ॑ధ్వ॒ఉత్త॑రా॒దధి॒ష్ణుభిః॑ |<p>తేమం᳚దసా॒నాధున॑యోరిశాదసోవా॒మంధ॑త్త॒యజ॑మానాయసున్వ॒తే || 7 || </td>
@@ -1948,7 +1948,7 @@
 <td class='VargaStyle1'>హిర᳚ణ్యరూపము॒షసో॒వ్యు॑ష్టా॒వయః॑స్థూణ॒ముది॑తా॒సూర్య॑స్య |<p>ఆరో᳚హథోవరుణమిత్ర॒గర్త॒మత॑శ్చక్షాథే॒,అది॑తిం॒దితిం᳚చ || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యద్బంహి॑ష్ఠం॒నాతి॒విధే᳚సుదానూ॒,అచ్ఛి॑ద్రం॒శర్మ॑భువనస్యగోపా |<p>తేన॑నోమిత్రావరుణావవిష్టం॒సిషా᳚సంతోజిగీ॒వాంసః॑స్యామ || 9 || </td>
+<td class='VargaStyle1'>యద్‌బంహి॑ష్ఠం॒నాతి॒విధే᳚సుదానూ॒,అచ్ఛి॑ద్రం॒శర్మ॑భువనస్యగోపా |<p>తేన॑నోమిత్రావరుణావవిష్టం॒సిషా᳚సంతోజిగీ॒వాంసః॑స్యామ || 9 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[63] ఋతస్యగోపావితి సప్తర్చస్య సూక్తస్యాత్రేయోర్చనానామిత్రావరుణౌజగతీ |<span class='MantraNumbering'>{మండల:5, సూక్త:63}{అనువాక:5, సూక్త:7}{అష్టక:4, అధ్యాయ:4}</span>
