--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format3/RVS-Devanagari-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format3/RVS-Devanagari-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 04-Jan-2025]</h6>
+<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1841,7 +1841,7 @@
 <td class='VargaStyle1'>आयेत॒स्थुःपृष॑तीषुश्रु॒तासु॑सु॒खेषु॑रु॒द्राम॒रुतो॒रथे᳚षु |<p>वना᳚चिदुग्राजिहते॒निवो᳚भि॒यापृ॑थि॒वीचि॑द्रेजते॒पर्व॑तश्चित् || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑वृ॒द्धोबि॑भायदि॒वश्चि॒त्‌सानु॑रेजतस्व॒नेवः॑ |<p>यत्क्रीळ॑थमरुतऋष्टि॒मन्त॒आप॑इवस॒ध्र्य᳚ञ्चोधवध्वे || 3 || </td>
+<td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑वृ॒द्धोबि॑भायदि॒वश्चि॒त्‌सानु॑रेजतस्व॒नेवः॑ |<p>यत्‌क्रीळ॑थमरुतऋष्टि॒मन्त॒आप॑इवस॒ध्र्य᳚ञ्चोधवध्वे || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>व॒रा,इ॒वेद्‌रै᳚व॒तासो॒हिर᳚ण्यैर॒भिस्व॒धाभि॑स्त॒न्वः॑पिपिश्रे |<p>श्रि॒येश्रेयां᳚सस्त॒वसो॒रथे᳚षुस॒त्रामहां᳚सिचक्रिरेत॒नूषु॑ || 4 || </td>
@@ -1850,7 +1850,7 @@
 <td class='VargaStyle1'>अ॒ज्ये॒ष्ठासो॒,अक॑निष्ठासए॒तेसंभ्रात॑रोवावृधुः॒सौभ॑गाय |<p>युवा᳚पि॒तास्वपा᳚रु॒द्रए᳚षांसु॒दुघा॒पृश्निः॑सु॒दिना᳚म॒रुद्भ्यः॑ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यदु॑त्त॒मेम॑रुतोमध्य॒मेवा॒यद्वा᳚व॒मेसु॑भगासोदि॒विष्ठ |<p>अतो᳚नोरुद्रा,उ॒तवा॒न्व१॑(अ॒)स्याऽग्ने᳚वि॒त्ताद्ध॒विषो॒यद्यजा᳚म || 6 || </td>
+<td class='VargaStyle1'>यदु॑त्त॒मेम॑रुतोमध्य॒मेवा॒यद्‌वा᳚व॒मेसु॑भगासोदि॒विष्ठ |<p>अतो᳚नोरुद्रा,उ॒तवा॒न्व१॑(अ॒)स्याऽग्ने᳚वि॒त्ताद्ध॒विषो॒यद्यजा᳚म || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अ॒ग्निश्च॒यन्म॑रुतोविश्ववेदसोदि॒वोवह॑ध्व॒उत्त॑रा॒दधि॒ष्णुभिः॑ |<p>तेम᳚न्दसा॒नाधुन॑योरिशादसोवा॒मंध॑त्त॒यज॑मानायसुन्व॒ते || 7 || </td>
@@ -1948,7 +1948,7 @@
 <td class='VargaStyle1'>हिर᳚ण्यरूपमु॒षसो॒व्यु॑ष्टा॒वयः॑स्थूण॒मुदि॑ता॒सूर्य॑स्य |<p>आरो᳚हथोवरुणमित्र॒गर्त॒मत॑श्चक्षाथे॒,अदि॑तिं॒दितिं᳚च || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यद्बंहि॑ष्ठं॒नाति॒विधे᳚सुदानू॒,अच्छि॑द्रं॒शर्म॑भुवनस्यगोपा |<p>तेन॑नोमित्रावरुणावविष्टं॒सिषा᳚सन्तोजिगी॒वांसः॑स्याम || 9 || </td>
+<td class='VargaStyle1'>यद्‌बंहि॑ष्ठं॒नाति॒विधे᳚सुदानू॒,अच्छि॑द्रं॒शर्म॑भुवनस्यगोपा |<p>तेन॑नोमित्रावरुणावविष्टं॒सिषा᳚सन्तोजिगी॒वांसः॑स्याम || 9 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[63] ऋतस्यगोपाविति सप्तर्चस्य सूक्तस्यात्रेयोर्चनानामित्रावरुणौजगती |<span class='MantraNumbering'>{मंडल:5, सूक्त:63}{अनुवाक:5, सूक्त:7}{अष्टक:4, अध्याय:4}</span>
