--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 04-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1500,7 +1500,7 @@
 <td class='VargaStyle1'>ஆ யே த॒ஸ்து²꞉ ப்ருʼஷ॑தீஷு ஶ்ரு॒தாஸு॑ ஸு॒கே²ஷு॑ ரு॒த்³ரா ம॒ருதோ॒ ரதே²᳚ஷு |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>வனா᳚ சிது³க்³ரா ஜிஹதே॒ நி வோ᳚ பி⁴॒யா ப்ரு॑ʼதி²॒வீ சி॑த்³ரேஜதே॒ பர்வ॑தஶ்சித் ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>பர்வ॑தஶ்சி॒ன்மஹி॑ வ்ரு॒ʼத்³தோ⁴ பி³॑பா⁴ய தி³॒வஶ்சி॒த்‌ ஸானு॑ ரேஜத ஸ்வ॒னே வ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யத்க்ரீள॑த² மருத ருʼஷ்டி॒மந்த॒ ஆப॑ இவ ஸ॒த்⁴ர்ய᳚ஞ்சோ த⁴வத்⁴வே ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
+<td class='VargaStyle1'>பர்வ॑தஶ்சி॒ன்மஹி॑ வ்ரு॒ʼத்³தோ⁴ பி³॑பா⁴ய தி³॒வஶ்சி॒த்‌ ஸானு॑ ரேஜத ஸ்வ॒னே வ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யத்‌ க்ரீள॑த² மருத ருʼஷ்டி॒மந்த॒ ஆப॑ இவ ஸ॒த்⁴ர்ய᳚ஞ்சோ த⁴வத்⁴வே ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>வ॒ரா, இ॒வேத்³‌ ரை᳚வ॒தாஸோ॒ ஹிர᳚ண்யைர॒பி⁴ ஸ்வ॒தா⁴பி⁴॑ஸ்த॒ன்வ॑꞉ பிபிஶ்ரே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>ஶ்ரி॒யே ஶ்ரேயாம்᳚ʼஸஸ்த॒வஸோ॒ ரதே²᳚ஷு ஸ॒த்ரா மஹாம்᳚ʼஸி சக்ரிரே த॒னூஷு॑ ||<span class='MantraNumbering'>{4/8}{4.3.25.4}{5.60.4}{5.5.4.4}{414, 4172}</span></td>
@@ -1509,7 +1509,7 @@
 <td class='VargaStyle1'>அ॒ஜ்யே॒ஷ்டா²ஸோ॒, அக॑நிஷ்டா²ஸ ஏ॒தே ஸம்ʼ ப்⁴ராத॑ரோ வாவ்ருʼது⁴॒꞉ ஸௌப⁴॑கா³ய |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யுவா᳚ பி॒தா ஸ்வபா᳚ ரு॒த்³ர ஏ᳚ஷாம்ʼ ஸு॒து³கா⁴॒ ப்ருʼஶ்னி॑꞉ ஸு॒தி³னா᳚ ம॒ருத்³ப்⁴ய॑꞉ ||<span class='MantraNumbering'>{5/8}{4.3.25.5}{5.60.5}{5.5.4.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யது³॑த்த॒மே ம॑ருதோ மத்⁴ய॒மே வா॒ யத்³வா᳚வ॒மே ஸு॑ப⁴கா³ஸோ தி³॒வி ஷ்ட² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>அதோ᳚ நோ ருத்³ரா, உ॒த வா॒ ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚ வி॒த்தாத்³த⁴॒விஷோ॒ யத்³யஜா᳚ம ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>யது³॑த்த॒மே ம॑ருதோ மத்⁴ய॒மே வா॒ யத்³‌ வா᳚வ॒மே ஸு॑ப⁴கா³ஸோ தி³॒வி ஷ்ட² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>அதோ᳚ நோ ருத்³ரா, உ॒த வா॒ ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚ வி॒த்தாத்³த⁴॒விஷோ॒ யத்³யஜா᳚ம ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அ॒க்³நிஶ்ச॒ யன்ம॑ருதோ விஶ்வவேத³ஸோ தி³॒வோ வஹ॑த்⁴வ॒ உத்த॑ரா॒த³தி⁴॒ ஷ்ணுபி⁴॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>தே ம᳚ந்த³ஸா॒னா து⁴ன॑யோ ரிஶாத³ஸோ வா॒மம்ʼ த⁴॑த்த॒ யஜ॑மானாய ஸுன்வ॒தே ||<span class='MantraNumbering'>{7/8}{4.3.25.7}{5.60.7}{5.5.4.7}{414, 4175}</span></td>
@@ -1605,7 +1605,7 @@
 <td class='VargaStyle1'>ஹிர᳚ண்யரூபமு॒ஷஸோ॒ வ்யு॑ஷ்டா॒வய॑꞉ஸ்தூ²ண॒முதி³॑தா॒ ஸூர்ய॑ஸ்ய |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்ருதவி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>ஆ ரோ᳚ஹதோ² வருண மித்ர॒ க³ர்த॒மத॑ஶ்சக்ஷாதே²॒, அதி³॑திம்॒ʼ தி³திம்᳚ʼ ச ||<span class='MantraNumbering'>{8/9}{4.3.31.3}{5.62.8}{5.5.6.8}{416, 4203}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யத்³ப³ம்ʼஹி॑ஷ்ட²ம்॒ʼ நாதி॒விதே⁴᳚ ஸுதா³னூ॒, அச்சி²॑த்³ரம்॒ʼ ஶர்ம॑ பு⁴வனஸ்ய கோ³பா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்ருதவி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>தேன॑ நோ மித்ராவருணாவவிஷ்டம்॒ʼ ஸிஷா᳚ஸந்தோ ஜிகீ³॒வாம்ʼஸ॑꞉ ஸ்யாம ||<span class='MantraNumbering'>{9/9}{4.3.31.4}{5.62.9}{5.5.6.9}{416, 4204}</span></td>
+<td class='VargaStyle1'>யத்³‌ ப³ம்ʼஹி॑ஷ்ட²ம்॒ʼ நாதி॒விதே⁴᳚ ஸுதா³னூ॒, அச்சி²॑த்³ரம்॒ʼ ஶர்ம॑ பு⁴வனஸ்ய கோ³பா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்ருதவி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>தேன॑ நோ மித்ராவருணாவவிஷ்டம்॒ʼ ஸிஷா᳚ஸந்தோ ஜிகீ³॒வாம்ʼஸ॑꞉ ஸ்யாம ||<span class='MantraNumbering'>{9/9}{4.3.31.4}{5.62.9}{5.5.6.9}{416, 4204}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[55] ருʼதஸ்யகோ³பாவிதி ஸப்தர்சஸ்ய ஸூக்தஸ்யாத்ரேயோர்சனாநாமித்ராவருணௌஜக³தீ |</td>
