--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 04-Jan-2025]</h6>
+<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1502,7 +1502,7 @@
 <td class='VargaStyle1'>ஆயேத॒ஸ்து²꞉ப்ருʼஷ॑தீஷுஶ்ரு॒தாஸு॑ஸு॒கே²ஷு॑ரு॒த்³ராம॒ருதோ॒ரதே²᳚ஷு |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>வனா᳚சிது³க்³ராஜிஹதே॒நிவோ᳚பி⁴॒யாப்ரு॑ʼதி²॒வீசி॑த்³ரேஜதே॒பர்வ॑தஶ்சி॒‌த்(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>பர்வ॑தஶ்சி॒ன்மஹி॑வ்ரு॒ʼத்³தோ⁴பி³॑பா⁴யதி³॒வஶ்சி॒த்‌ஸானு॑ரேஜதஸ்வ॒னேவ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யத்க்ரீள॑த²மருதருʼஷ்டி॒மந்த॒ஆப॑இவஸ॒த்⁴ர்ய᳚ஞ்சோத⁴வத்⁴வே॒(ஸ்வாஹா᳚) || 3 || </td>
+<td class='VargaStyle1'>பர்வ॑தஶ்சி॒ன்மஹி॑வ்ரு॒ʼத்³தோ⁴பி³॑பா⁴யதி³॒வஶ்சி॒த்‌ஸானு॑ரேஜதஸ்வ॒னேவ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யத்‌க்ரீள॑த²மருதருʼஷ்டி॒மந்த॒ஆப॑இவஸ॒த்⁴ர்ய᳚ஞ்சோத⁴வத்⁴வே॒(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>வ॒ரா,இ॒வேத்³‌ரை᳚வ॒தாஸோ॒ஹிர᳚ண்யைர॒பி⁴ஸ்வ॒தா⁴பி⁴॑ஸ்த॒ன்வ॑꞉பிபிஶ்ரே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>ஶ்ரி॒யேஶ்ரேயாம்᳚ʼஸஸ்த॒வஸோ॒ரதே²᳚ஷுஸ॒த்ராமஹாம்᳚ʼஸிசக்ரிரேத॒னூஷு॒(ஸ்வாஹா᳚) || 4 || </td>
@@ -1511,7 +1511,7 @@
 <td class='VargaStyle1'>அ॒ஜ்யே॒ஷ்டா²ஸோ॒,அக॑நிஷ்டா²ஸஏ॒தேஸம்ʼப்⁴ராத॑ரோவாவ்ருʼது⁴॒꞉ஸௌப⁴॑கா³ய |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யுவா᳚பி॒தாஸ்வபா᳚ரு॒த்³ரஏ᳚ஷாம்ʼஸு॒து³கா⁴॒ப்ருʼஶ்னி॑꞉ஸு॒தி³னா᳚ம॒ருத்³ப்⁴ய॒꞉(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யது³॑த்த॒மேம॑ருதோமத்⁴ய॒மேவா॒யத்³வா᳚வ॒மேஸு॑ப⁴கா³ஸோதி³॒விஷ்ட² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>அதோ᳚நோருத்³ரா,உ॒தவா॒ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚வி॒த்தாத்³த⁴॒விஷோ॒யத்³யஜா᳚ம॒(ஸ்வாஹா᳚) || 6 || </td>
+<td class='VargaStyle1'>யது³॑த்த॒மேம॑ருதோமத்⁴ய॒மேவா॒யத்³‌வா᳚வ॒மேஸு॑ப⁴கா³ஸோதி³॒விஷ்ட² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>அதோ᳚நோருத்³ரா,உ॒தவா॒ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚வி॒த்தாத்³த⁴॒விஷோ॒யத்³யஜா᳚ம॒(ஸ்வாஹா᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அ॒க்³நிஶ்ச॒யன்ம॑ருதோவிஶ்வவேத³ஸோதி³॒வோவஹ॑த்⁴வ॒உத்த॑ரா॒த³தி⁴॒ஷ்ணுபி⁴॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>தேம᳚ந்த³ஸா॒னாது⁴ன॑யோரிஶாத³ஸோவா॒மம்ʼத⁴॑த்த॒யஜ॑மானாயஸுன்வ॒தே(ஸ்வாஹா᳚) || 7 || </td>
@@ -1607,7 +1607,7 @@
 <td class='VargaStyle1'>ஹிர᳚ண்யரூபமு॒ஷஸோ॒வ்யு॑ஷ்டா॒வய॑꞉ஸ்தூ²ண॒முதி³॑தா॒ஸூர்ய॑ஸ்ய |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்ருதவி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>ஆரோ᳚ஹதோ²வருணமித்ர॒க³ர்த॒மத॑ஶ்சக்ஷாதே²॒,அதி³॑திம்॒ʼதி³திம்᳚ʼச॒(ஸ்வாஹா᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யத்³ப³ம்ʼஹி॑ஷ்ட²ம்॒ʼநாதி॒விதே⁴᳚ஸுதா³னூ॒,அச்சி²॑த்³ரம்॒ʼஶர்ம॑பு⁴வனஸ்யகோ³பா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்ருதவி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>தேன॑நோமித்ராவருணாவவிஷ்டம்॒ʼஸிஷா᳚ஸந்தோஜிகீ³॒வாம்ʼஸ॑꞉ஸ்யாம॒(ஸ்வாஹா᳚) || 9 || </td>
+<td class='VargaStyle1'>யத்³‌ப³ம்ʼஹி॑ஷ்ட²ம்॒ʼநாதி॒விதே⁴᳚ஸுதா³னூ॒,அச்சி²॑த்³ரம்॒ʼஶர்ம॑பு⁴வனஸ்யகோ³பா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்ருதவி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>தேன॑நோமித்ராவருணாவவிஷ்டம்॒ʼஸிஷா᳚ஸந்தோஜிகீ³॒வாம்ʼஸ॑꞉ஸ்யாம॒(ஸ்வாஹா᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[55] ருʼதஸ்யகோ³பாவிதி ஸப்தர்சஸ்ய ஸூக்தஸ்யாத்ரேயோர்சனாநாமித்ராவருணௌஜக³தீ |<span class='MantraNumbering'>{அஷ்டக:4, அத்⁴யாய:4}{மண்ட³ல:5, ஸூக்த:63}{அனுவாக:5, ஸூக்த:7}</td>
