--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format1/RVS-Telugu-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format1/RVS-Telugu-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 04-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 06-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1500,7 +1500,7 @@
 <td class='VargaStyle1'>ఆ యే త॒స్థుః పృష॑తీషు శ్రు॒తాసు॑ సు॒ఖేషు॑ రు॒ద్రా మ॒రుతో॒ రథే᳚షు |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>వనా᳚ చిదుగ్రా జిహతే॒ ని వో᳚ భి॒యా పృ॑థి॒వీ చి॑ద్రేజతే॒ పర్వ॑తశ్చిత్ ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>పర్వ॑తశ్చి॒న్మహి॑ వృ॒ద్ధో బి॑భాయ ది॒వశ్చి॒త్‌ సాను॑ రేజత స్వ॒నే వః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యత్క్రీళ॑థ మరుత ఋష్టి॒మంత॒ ఆప॑ ఇవ స॒ధ్ర్యం᳚చో ధవధ్వే ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
+<td class='VargaStyle1'>పర్వ॑తశ్చి॒న్మహి॑ వృ॒ద్ధో బి॑భాయ ది॒వశ్చి॒త్‌ సాను॑ రేజత స్వ॒నే వః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యత్‌ క్రీళ॑థ మరుత ఋష్టి॒మంత॒ ఆప॑ ఇవ స॒ధ్ర్యం᳚చో ధవధ్వే ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>వ॒రా, ఇ॒వేద్‌ రై᳚వ॒తాసో॒ హిర᳚ణ్యైర॒భి స్వ॒ధాభి॑స్త॒న్వః॑ పిపిశ్రే |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>శ్రి॒యే శ్రేయాం᳚సస్త॒వసో॒ రథే᳚షు స॒త్రా మహాం᳚సి చక్రిరే త॒నూషు॑ ||<span class='MantraNumbering'>{4/8}{4.3.25.4}{5.60.4}{5.5.4.4}{414, 4172}</span></td>
@@ -1509,7 +1509,7 @@
 <td class='VargaStyle1'>అ॒జ్యే॒ష్ఠాసో॒, అక॑నిష్ఠాస ఏ॒తే సం భ్రాత॑రో వావృధుః॒ సౌభ॑గాయ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యువా᳚ పి॒తా స్వపా᳚ రు॒ద్ర ఏ᳚షాం సు॒దుఘా॒ పృశ్నిః॑ సు॒దినా᳚ మ॒రుద్భ్యః॑ ||<span class='MantraNumbering'>{5/8}{4.3.25.5}{5.60.5}{5.5.4.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యదు॑త్త॒మే మ॑రుతో మధ్య॒మే వా॒ యద్వా᳚వ॒మే సు॑భగాసో ది॒వి ష్ఠ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>అతో᳚ నో రుద్రా, ఉ॒త వా॒ న్వ1॑(అ॒)స్యాఽగ్నే᳚ వి॒త్తాద్ధ॒విషో॒ యద్యజా᳚మ ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>యదు॑త్త॒మే మ॑రుతో మధ్య॒మే వా॒ యద్‌ వా᳚వ॒మే సు॑భగాసో ది॒వి ష్ఠ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>అతో᳚ నో రుద్రా, ఉ॒త వా॒ న్వ1॑(అ॒)స్యాఽగ్నే᳚ వి॒త్తాద్ధ॒విషో॒ యద్యజా᳚మ ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అ॒గ్నిశ్చ॒ యన్మ॑రుతో విశ్వవేదసో ది॒వో వహ॑ధ్వ॒ ఉత్త॑రా॒దధి॒ ష్ణుభిః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>తే మం᳚దసా॒నా ధున॑యో రిశాదసో వా॒మం ధ॑త్త॒ యజ॑మానాయ సున్వ॒తే ||<span class='MantraNumbering'>{7/8}{4.3.25.7}{5.60.7}{5.5.4.7}{414, 4175}</span></td>
@@ -1605,7 +1605,7 @@
 <td class='VargaStyle1'>హిర᳚ణ్యరూపము॒షసో॒ వ్యు॑ష్టా॒వయః॑స్థూణ॒ముది॑తా॒ సూర్య॑స్య |<span class='RishiDevChandas'>{ఆత్రేయః శ్రుతవిః | మిత్రావరుణౌ | త్రిష్టుప్}</span><p>ఆ రో᳚హథో వరుణ మిత్ర॒ గర్త॒మత॑శ్చక్షాథే॒, అది॑తిం॒ దితిం᳚ చ ||<span class='MantraNumbering'>{8/9}{4.3.31.3}{5.62.8}{5.5.6.8}{416, 4203}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యద్బంహి॑ష్ఠం॒ నాతి॒విధే᳚ సుదానూ॒, అచ్ఛి॑ద్రం॒ శర్మ॑ భువనస్య గోపా |<span class='RishiDevChandas'>{ఆత్రేయః శ్రుతవిః | మిత్రావరుణౌ | త్రిష్టుప్}</span><p>తేన॑ నో మిత్రావరుణావవిష్టం॒ సిషా᳚సంతో జిగీ॒వాంసః॑ స్యామ ||<span class='MantraNumbering'>{9/9}{4.3.31.4}{5.62.9}{5.5.6.9}{416, 4204}</span></td>
+<td class='VargaStyle1'>యద్‌ బంహి॑ష్ఠం॒ నాతి॒విధే᳚ సుదానూ॒, అచ్ఛి॑ద్రం॒ శర్మ॑ భువనస్య గోపా |<span class='RishiDevChandas'>{ఆత్రేయః శ్రుతవిః | మిత్రావరుణౌ | త్రిష్టుప్}</span><p>తేన॑ నో మిత్రావరుణావవిష్టం॒ సిషా᳚సంతో జిగీ॒వాంసః॑ స్యామ ||<span class='MantraNumbering'>{9/9}{4.3.31.4}{5.62.9}{5.5.6.9}{416, 4204}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[55] ఋతస్యగోపావితి సప్తర్చస్య సూక్తస్యాత్రేయోర్చనానామిత్రావరుణౌజగతీ |</td>
